--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
                 .selectAll("p")
                 .data(data)
                 .text(function (d, i) {
+                    // "d" gives you your data element, 
+                    // "i" gives you the index of data in the array 
+                    //  is a reference of the current DOM element
                     console.log("d: " + d);
                     console.log("i: " + i);
                     console.log("this: " + this);
