--- a/event_handling.html
+++ b/event_handling.html
@@ -4,29 +4,36 @@
     <meta charset="UTF-8">
     <title>D3 Tutorial</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
+    <style>
+        div {
+            height: 100px;
+            width: 100px;
+            background-color: steelblue;
+            margin:5px;
+        }
+    </style>
 </head>
 
 <body>
-    <p></p>
-    <p></p>
-    <p></p>
+    <div></div>
 </body>
 
 <script>
-    var data = [100, 200, 300];
-        var paragraph = d3.select("body")
-                .selectAll("p")
-                .data(data)
-                .text(function (d, i) {
-                    // "d" gives you your data element, 
-                    // "i" gives you the index of data in the array 
-                    //  is a reference of the current DOM element
-                    console.log("d: " + d);
-                    console.log("i: " + i);
-                    console.log("this: " + this);
+    d3.selectAll("div")
+      .on("mouseover", function(){
+          d3.select(this)
+            .style("background-color", "orange");
 
-                    return d;
-                });
+          // Get current event info
+          console.log(d3.event);
+          
+          // Get x & y co-ordinates
+          console.log(d3.pointer(this));
+      })
+      .on("mouseout", function(){
+          d3.select(this)
+            .style("background-color", "steelblue")
+      });
 </script>
 
 </html>
