--- a/event_handling/event_handling.html
+++ b/event_handling/event_handling.html
@@ -4,14 +4,7 @@
     <meta charset="UTF-8">
     <title>D3 Tutorial</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <style>
-        div {
-            height: 100px;
-            width: 100px;
-            background-color: steelblue;
-            margin:5px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
