--- a/animation/index.html
+++ b/animation/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div id="container"></div>
+    <!-- <div id="container"></div> -->
 </body>
 
 <script src="animation.js"></script>
